# MC2Spy

./: .gitignore  CMakeLists.txt  README.md
src/: buffer.cpp  buffer.hpp  common.hpp  main.cpp  qrenc.cpp  qrenc.hpp  reporting.cpp  reporting.hpp  serverlist.cpp  serverlist.hpp  slistenc.cpp  slistenc.hpp
